Library-Tree-v2.4.0.mod.28 	- Fixed bug on original script within HTML options panel on dropdown layout when opening help boxes. Now they are placed relative to the buttons which open them. Also fixed global overflow problems on every element, substituting previous hacks with proper CSS formatting. 	- Fixed Album Art not working on 'Group:auto' mode for 'View by Album' default pattern. 	- HTML options panel code cleanup. 	- Moved all licenses to 'assets\licenses'. 	- Removed license popup on first installations.

--- a/assets/html/styles10.css
+++ b/assets/html/styles10.css
@@ -5,8 +5,8 @@ input:hover:focus {outline:none !important; border:1px solid #0078D7;}
 input:hover {outline:none !important; border:1px solid #000000;}
 label {font:caption;}
 button {font:caption; background:#E1E1E1; color:ButtonText; border:1px solid #ADADAD; margin:5px; padding:3px; width:auto; min-width:70px; display:inline-block;}
-button:focus {outline:none !important; border:2px solid #0078D7; padding:2px;} 
-button:hover {background:#e5f1fb; outline:none !important; border:1px solid #0078D7; padding:3px;}div {overflow:hidden;}
+button:focus {outline:none !important; border:2px solid #0078D7; padding:2px;}
+button:hover {background:#e5f1fb; outline:none !important; border:1px solid #0078D7; padding:3px;}
 button:focus:hover {background:#e5f1fb; outline:none !important; border:2px solid #0078D7; padding:2px;} span {display:block; padding-right:10px;}
 button[disabled] {background:#CCCCCC; color:#EBEBE4;}
 /* --Suppress button:hover manually, since not() is not working =( */
